--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                 <div class="flex flex-row justify-between space-x-1">
                     <div class="flex">
                         <h4 class="text-gray-300">Belum punya akun?</h4>
-                        <a href="#" class="text-white">Daftar</a>
+                        <a href="register.html" class="text-white">Daftar</a>
                     </div>
                     <div>
                         <a href="#" class="text-white">Lupa kata sandi?</a>
