--- a/register.html
+++ b/register.html
@@ -81,8 +81,8 @@
                 <!-- forgot password -->
                 <div class="flex flex-row justify-between space-x-1">
                     <div class="flex">
-                        <h4 class="text-gray-300">Belum punya akun?</h4>
-                        <a href="#" class="text-white">Daftar</a>
+                        <h4 class="text-gray-300">Sudah punya akun?</h4>
+                        <a href="login.html" class="text-white">Login</a>
                     </div>
                     <!-- <div>
                         <a href="#" class="text-white">Lupa kata sandi?</a>
